--- a/snaz-frontend/package.json
+++ b/snaz-frontend/package.json
@@ -29,7 +29,8 @@
     "react-dom": "19.1.0",
     "react-resizable-panels": "^3.0.5",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
