--- a/snaz-backend/package.json
+++ b/snaz-backend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "seed": "ts-node src/utils/seedData.ts",
+    "seed-admin": "ts-node src/utils/seedAdmin.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
