--- a/snaz-frontend/package.json
+++ b/snaz-frontend/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
+    "build:cf": "npm run build && npx @cloudflare/next-on-pages",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "deploy": "npm run build:cf && wrangler pages deploy .vercel/output/static",
+    "preview": "wrangler pages dev .vercel/output/static"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -37,6 +40,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.16",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
@@ -46,6 +50,7 @@
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^4.43.0"
   }
 }
