--- a/snaz-frontend/.gitignore
+++ b/snaz-frontend/.gitignore
@@ -20,6 +20,7 @@
 
 # production
 /build
+/dist
 .wrangler
 
 # misc
@@ -41,3 +42,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# sst
+.sst
+
+# open-next
+.open-next
