--- a/snaz-frontend/package.json
+++ b/snaz-frontend/package.json
@@ -7,11 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
-    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy"
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "preview": "npm run pages:build && npx wrangler pages dev",
+    "deploy": "npm run pages:build && npx wrangler pages deploy"
   },
   "dependencies": {
-    "@opennextjs/cloudflare": "^1.11.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -29,11 +29,11 @@
     "date-fns": "^4.1.0",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "next": "^15.0.3",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "react": "^18.3.1",
     "react-day-picker": "^9.9.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^18.3.1",
     "react-resizable-panels": "^3.0.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -44,8 +44,8 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
