--- a/snaz-frontend/package.json
+++ b/snaz-frontend/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.542.0",
     "next": "^15.0.3",
